--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/NeitF/Controle-Financas/issues"
   },
-  "homepage": "https://github.com/NeitF/Controle-Financas#readme"
+  "homepage": "https://github.com/NeitF/Controle-Financas#readme",
+  "dependencies": {
+    "chalk": "^5.2.0",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
+  }
 }
