--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/NeitF/Controle-Financas#readme",
   "dependencies": {
-    "chalk": "^5.2.0",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
