--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "A project of control and managment of pessoal finance",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,14 +17,8 @@
   },
   "homepage": "https://github.com/NeitF/Controle-Financas#readme",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.9",
+    "chalk": "^5.2.0",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "morgan": "^1.10.0"
   }
 }
